// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad sku value - cyrillic 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`should be invalid for bad sku value - multiline 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`should be invalid for bad sku value - multimatch 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`should be invalid for bad sku value - non-word 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`should be invalid for bad sku value - postfix 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`should be invalid for bad sku value - prefix 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`should be invalid for bad sku value - random 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`should be invalid for bad uuid 1`] = `
Object {
  "id": "yup:string.uuid",
}
`;

exports[`should be invalid for empty name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`should be invalid for undefined name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;
